<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showProfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:context=".ui.neighbour_list.ProfilActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="TODO"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#DCDCDC">

        <ImageView
            android:id="@+id/show_avatar_neighbour"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/show_name_avatar_neighbour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Prénom"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_anchor="@id/show_avatar_neighbour"
            app:layout_constraintBottom_toBottomOf="@+id/show_avatar_neighbour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.96" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_avatar_neighbour">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/show_name_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:text="Prénom"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/show_location_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_baseline_location_on_24"
                    android:drawablePadding="7dp"
                    android:text="Localisation" />

                <TextView
                    android:id="@+id/show_phone_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_baseline_local_phone_24"
                    android:drawablePadding="7dp"
                    android:text="Téléphone" />

                <TextView
                    android:id="@+id/show_adress_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="6dp"
                    android:drawableStart="@drawable/ic_baseline_language_24"
                    android:drawablePadding="7dp"
                    android:text="www.facebook/Prénom" />
            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView1">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

                <TextView
                    android:id="@+id/show_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="16dp"
                    android:text="A propos de moi"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="5dp"
                    android:background="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/show_about_neighbour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="6dp"
                    android:paddingRight="5dp"
                    android:text="Text descriptive" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButtonProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_star_border_white_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/show_avatar_neighbour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_avatar_neighbour" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>